--- a/logros.html
+++ b/logros.html
@@ -27,49 +27,71 @@
     </nav>
 
     <!-- Títulos y Logros -->
-    <section class="achievements">
-        <div class="section-header">
-            <h2>Logros de T1</h2>
-            <p>Estos son algunos de los logros más importantes de T1 en su trayectoria.</p>
-        </div>
-        <div class="achievements-grid">
-            <!-- Ejemplo de logro de T1 -->
-            <div class="achievement-card">
-                <div class="achievement-icon trophy-icon"></div>
-                <h3>Mundiales Ganados</h3>
-                <p>T1 ha ganado un total de 4 Mundiales de LoL, consolidándose como uno de los equipos más exitosos en la historia de la competencia.</p>
-                <p>Desde su primer campeonato en 2013, el equipo ha mantenido un nivel constante de éxito a nivel mundial, con victorias en 2013, 2016, 2019, y 2021.</p>
-                <p>Su actuación en estos torneos no solo les ha valido reconocimiento, sino también el respeto entre los mejores equipos del mundo.</p>
-                <p>Además de sus victorias en el Mundial, T1 ha sido pionero en estrategias innovadoras, dejando una huella imborrable en el metajuego competitivo.</p>
-                <p>Estos logros han sido posibles gracias a la consistencia de sus jugadores, especialmente en momentos cruciales donde demostraron gran capacidad para adaptarse a las circunstancias del torneo.</p>
-                <p>El más reciente campeonato del Mundial fue especialmente relevante, pues T1 se enfrentó a algunos de los rivales más duros de la historia de League of Legends.</p>
-            </div>
+  <section class="achievements">
+    <div class="section-header">
+        <h2>🏆 Logros de T1</h2>
+        <p>Estos son algunos de los logros más importantes de T1 en su trayectoria competitiva.</p>
+    </div>
 
-            <!-- Ejemplo de logro de LCK -->
-            <div class="achievement-card">
-                <div class="achievement-icon trophy-icon"></div>
-                <h3>Títulos LCK</h3>
-                <p>T1 ha ganado un total de 11 títulos en la liga de Corea, LCK, lo que los posiciona como el equipo más dominante en su región durante más de una década.</p>
-                <p>Estos títulos incluyen victorias en diversos splits, con un equipo conocido por su perfección en el juego temprano y la capacidad para ejecutar estrategias innovadoras.</p>
-                <p>El equipo ha sido el protagonista en algunos de los enfrentamientos más épicos de la historia de la LCK, estableciendo una era dorada para el LoL en Corea del Sur.</p>
-                <p>Los jugadores de T1 son famosos por su habilidad para enfrentarse a los equipos más fuertes y por su disciplina en la preparación de cada serie.</p>
-                <p>La historia de T1 en LCK también está marcada por su rivalidad con otros equipos, como Samsung Galaxy y Gen.G, con quienes se han disputado el liderazgo de la región en varias ocasiones.</p>
-                <p>Con una mezcla de veteranos y nuevos talentos, T1 sigue demostrando que es uno de los equipos más competitivos a nivel mundial en LoL.</p>
-            </div>
+    <div class="achievements-grid">
 
-            <!-- Ejemplo de logro MSI -->
-            <div class="achievement-card">
-                <div class="achievement-icon trophy-icon"></div>
-                <h3>Campeonatos MSI</h3>
-                <p>T1 ha ganado 3 veces el Mid-Season Invitational (MSI), uno de los torneos más prestigiosos a nivel mundial, que reúne a los campeones de cada región.</p>
-                <p>Estas victorias en el MSI consolidan a T1 como una de las franquicias más importantes de la historia de los esports, especialmente en el escenario internacional.</p>
-                <p>En su victoria más reciente, T1 demostró una gran capacidad de adaptación ante equipos internacionales, superando a rivales muy fuertes del extranjero.</p>
-                <p>El MSI ha sido siempre un torneo clave para T1, que lo utiliza como una plataforma para poner a prueba su nivel de cara a los próximos campeonatos mundiales.</p>
-                <p>La victoria de T1 en el MSI no solo fue un triunfo para el equipo, sino también un reflejo de la evolución del juego y la dedicación de sus jugadores y cuerpo técnico.</p>
-                <p>Al igual que en otros logros, el éxito de T1 en el MSI ha sido el resultado de años de trabajo en equipo, perfección de estrategias y la combinación de veteranos con nuevos talentos.</p>
-            </div>
+        <!-- Logro Worlds -->
+        <div class="achievement-card">
+            <div class="achievement-icon trophy-icon"></div>
+            <h3>🌍 Mundiales Ganados (Worlds)</h3>
+
+            <p>🏅 T1 ha ganado un total de <strong>4 Campeonatos Mundiales de League of Legends</strong>, siendo el equipo más exitoso en la historia del torneo.</p>
+
+            <p>📅 Los títulos fueron obtenidos en los años <strong>2013, 2015, 2016 y 2023</strong>.</p>
+
+            <p>🔥 Desde su primer campeonato en 2013, T1 se ha caracterizado por su dominio estratégico y su capacidad para rendir bajo presión en escenarios internacionales.</p>
+
+            <p>🧠 El equipo ha sido pionero en estrategias innovadoras que han influido directamente en el metajuego competitivo profesional.</p>
+
+            <p>💪 Estos logros han sido posibles gracias a la consistencia de sus jugadores, destacándose en momentos clave y adaptándose a distintos estilos de juego.</p>
+
+            <p>⭐ El campeonato de 2023 fue especialmente significativo, marcando el regreso de T1 a la cima mundial después de varios años sin ganar Worlds.</p>
         </div>
-    </section>
+
+        <!-- Logro LCK -->
+        <div class="achievement-card">
+            <div class="achievement-icon trophy-icon"></div>
+            <h3>🇰🇷 Títulos de la LCK</h3>
+
+            <p>🏆 T1 ha ganado un total de <strong>10 títulos de la League of Legends Champions Korea (LCK)</strong>, siendo el equipo más dominante de la región.</p>
+
+            <p>📊 Estos campeonatos fueron obtenidos a lo largo de distintos splits, demostrando una consistencia excepcional durante más de una década.</p>
+
+            <p>⚔️ El equipo ha protagonizado algunos de los enfrentamientos más épicos de la historia de la LCK.</p>
+
+            <p>🎯 Los jugadores de T1 son reconocidos por su disciplina, preparación estratégica y capacidad para enfrentar a los equipos más fuertes.</p>
+
+            <p>🔥 La historia de T1 en la LCK está marcada por intensas rivalidades contra equipos como <strong>Gen.G</strong> y <strong>Samsung Galaxy</strong>.</p>
+
+            <p>🌟 Con una combinación de veteranos y nuevos talentos, T1 sigue siendo uno de los equipos más competitivos del mundo.</p>
+        </div>
+
+        <!-- Logro MSI -->
+        <div class="achievement-card">
+            <div class="achievement-icon trophy-icon"></div>
+            <h3>🌐 Campeonatos MSI</h3>
+
+            <p>🥇 T1 ha ganado el <strong>Mid-Season Invitational (MSI)</strong> en <strong>2 ocasiones</strong>.</p>
+
+            <p>📅 Los títulos fueron obtenidos en los años <strong>2016 y 2017</strong>.</p>
+
+            <p>🌍 El MSI reúne a los campeones de cada región, convirtiéndolo en uno de los torneos internacionales más prestigiosos.</p>
+
+            <p>🧩 Estas victorias consolidaron a T1 como una potencia internacional capaz de adaptarse a distintos estilos de juego.</p>
+
+            <p>📈 El MSI ha sido clave para medir el nivel de T1 de cara a los Campeonatos Mundiales.</p>
+
+            <p>🤝 El éxito en este torneo es resultado del trabajo en equipo, la preparación estratégica y la combinación de experiencia y talento joven.</p>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- Pie de Página -->
     <footer class="footer">
