--- a/equipo.html
+++ b/equipo.html
@@ -35,9 +35,23 @@
     <section class="news">
         <h2>Fichajes y Movimientos de Jugadores</h2>
 
+         <!-- Fichajes 2025 -->
+          <div class="fichaje">
+            <h3>Fichajes de 2025</h3>
+            <p><strong>Jugador:</strong> Peyz (Kim Soo-hwan)</p>
+            <p><strong>Posición:</strong> ADC (AD carry)</p>
+            <p><strong>Comentario:</strong> El joven adc ganador de multiple lck se une al equipo luego de la salida del jugador Lee Min-hyeong (gumayusi), llega como un jugador experimentado y con un gran alcance de juego</p>
+            <p><strong>Jugador:</strong> Gumayusi (Lee Min-hyeong)</p>
+            <p><strong>Posición:</strong> ADC (AD carry)</p>
+            <p><strong>Comentario:</strong> El tres veces campeon del mundo e mvp de la final sale del equipo luego de acuerdos mutuos con la organizacion y se une al equipo de hle donde se recuentra con su antiguo compañero Choi Woo-je(zeus) para volver a jugar juntos </p>
+        </div>
+
         <!-- Fichajes 2024 -->
         <div class="fichaje">
-            <h3>Fichajes de 2024</h3>
+            <h3>Fichajes de 2024</h3>  
+              <p><strong>Jugador:</strong> Zeus (Choi Woo-je)</p>
+            <p><strong>Posición:</strong> Top (Top line)</p>
+            <p><strong>Comentario:</strong> El dos veces campeon del mundo con la escuadra de T1 sale del equipo luego de ser el mvp en dicha final y se une al equipo de hle </p>
             <p><strong>Jugador:</strong> Faker (Lee Sang-hyeok)</p>
             <p><strong>Posición:</strong> Medio (Mid Lane)</p>
             <p><strong>Comentario:</strong> Faker sigue siendo la pieza central del equipo T1. En 2024, renovó su contrato con el equipo y se compromete a seguir luchando por más títulos internacionales. Este movimiento fue clave para el futuro del equipo, dada su experiencia y estatus como una de las figuras más emblemáticas de la historia de League of Legends.</p>
@@ -46,13 +60,13 @@
             <p><strong>Comentario:</strong> Keria se mantiene en el roster después de su destacada actuación en 2023. Su sinergia con el AD carry Gumayusi ha sido un factor clave para el éxito del equipo en los últimos años. T1 ha confirmado su continuidad para 2024, destacando su rol de liderazgo en la bot lane.</p>
         </div>
 
-        <!-- Fichajes 2023 -->
+        <!-- Fichajes 2022 -->
         <div class="fichaje">
             <h3>Fichajes de 2022</h3>
             <p><strong>Jugador:</strong> Zeus (Choi Woo-je) - Top Lane</p>
             <p><strong>Comentario:</strong> En 2022, T1 reforzó su top lane con Zeus, quien llegó con grandes expectativas luego de destacarse en la liga secundaria. En su primera temporada con T1, Zeus demostró ser una de las piezas más sólidas, jugando un papel crucial en las victorias de LCK y en su clasificación al Mundial.</p>
        
-        <!-- Fichajes 2022 -->
+        <!-- Fichajes 2021 -->
         <div class="fichaje">
             <h3>Fichajes de 2021</h3>
             <p><strong>Jugador:</strong> Gumayusi (Lee Min-hyeong) - AD Carry</p>
