--- a/noticias.html
+++ b/noticias.html
@@ -33,41 +33,78 @@
             <p>Todo lo que necesitas saber sobre T1, actualizaciones, entrevistas y más.</p>
         </div>
 
-        <!-- Noticias de 2024 -->
-        <div class="news-item">
-            <h3>Campeonato LCK 2024: T1 se corona campeón</h3>
-            <p><strong>Fecha:</strong> 20 de marzo, 2024</p>
-            <p><strong>Fuente:</strong> <a href="https://www.lolesports.com">lolesports.com</a></p>
-            <p>T1 ha alcanzado otro hito en su historia al coronarse campeones de la LCK 2024, tras una serie épica contra Gen.G en la final. Este título se suma a su impresionante palmarés, consolidándose como uno de los equipos más exitosos en la historia de la liga surcoreana.</p>
-            <p>La final, que se jugó en un formato de 5 partidas, fue una de las más emocionantes de los últimos años. T1 mostró su capacidad de adaptación y juego en equipo al remontar una desventaja de 2-1, llevándose las dos últimas partidas de forma contundente.</p>
-            <p>El MVP de la serie fue Faker, quien demostró una vez más por qué es considerado uno de los mejores jugadores de la historia de League of Legends. Sus jugadas decisivas, especialmente con campeones como Orianna y Sylas, fueron clave para asegurar la victoria del equipo.</p>
-            <p>Con este título, T1 no solo asegura su lugar en el próximo MSI 2024, sino que también reafirma su dominio en la región de Corea. Este campeonato también le permitió a Faker ganar su sexto título de LCK, una marca histórica que lo coloca aún más alto en el Olimpo de los esports.</p>
-            <p>La victoria en la LCK 2024 es el resultado de una mezcla de veteranos como Faker y nuevos talentos como Zeus y Keria, quienes han aportado un estilo de juego más agresivo y táctico. El equipo se ha consolidado como una verdadera máquina de ganar, con una sinergia impresionante entre todos sus miembros.</p>
-        </div>
+<!-- Noticias de 2025 -->
+<div class="news-item">
+    <h3>🌍 Campeonato Mundial 2025: T1 hace historia con un “three-peat”</h3>
+    <p><strong>📅 Fecha:</strong> noviembre, 2025</p>
+    <p><strong>📰 Fuente:</strong> <a href="https://www.invenglobal.com">Inven Global</a></p>
 
-        <!-- Noticias sobre fichajes -->
-        <div class="news-item">
-            <h3>T1 Anuncia el Fichaje de un Nuevo Jungler para el Split de Verano</h3>
-            <p><strong>Fecha:</strong> 15 de mayo, 2024</p>
-            <p><strong>Fuente:</strong> <a href="https://www.t1.gg">t1.gg</a></p>
-            <p>En una decisión estratégica, T1 ha anunciado el fichaje de un nuevo jungler para el Split de Verano 2024 de la LCK. El jugador, conocido como "JunglerX", ha sido parte de varios equipos exitosos en la región de China y se une al roster con la misión de fortalecer la posición de jungla, que en ocasiones fue vista como una debilidad para el equipo en el pasado.</p>
-            <p>Este fichaje ha sido celebrado por los fanáticos, quienes esperan que la experiencia y habilidad de JunglerX complementen perfectamente el estilo de juego de T1. Se espera que su llegada aporte más estabilidad en la fase de jungla y más agresividad en el control de objetivos a lo largo de la temporada.</p>
-            <p>El coach de T1, Kim "Bengi" Seong-hun, declaró en una rueda de prensa que el equipo estaba buscando un jungler con experiencia en grandes torneos internacionales, y JunglerX cumplía con todos los requisitos. Además, destacó que la química con el resto del equipo es crucial para lograr el éxito a largo plazo.</p>
-            <p>La noticia llega en un momento clave para T1, ya que la competencia en la LCK está más feroz que nunca. Equipos como Gen.G y DK han reforzado su roster con fichajes de alto perfil, por lo que T1 necesitaba hacer un movimiento para mantenerse competitivo en la región.</p>
-            <p>El debut de JunglerX está previsto para el comienzo del Split de Verano 2024, y los fanáticos ya están ansiosos por ver cómo se adapta al equipo y cómo se enfrenta a los poderosos rivales de la LCK.</p>
-        </div>
+    <p>T1 ganó el <strong>World Championship 2025</strong> tras derrotar a <strong>KT Rolster por 3-2</strong> en una final histórica disputada en Chengdu, China.</p>
 
-        <!-- Noticias sobre el MSI -->
-        <div class="news-item">
-            <h3>T1 en el MSI 2024: Primeros en la fase de grupos</h3>
-            <p><strong>Fecha:</strong> 25 de abril, 2024</p>
-            <p><strong>Fuente:</strong> <a href="https://www.msi.gg">msi.gg</a></p>
-            <p>El equipo de T1 ha tenido una actuación sobresaliente en la fase de grupos del MSI 2024, al terminar invicto con 6 victorias y 0 derrotas. Esta hazaña les permitió avanzar a la siguiente fase con gran confianza, y ahora todos los ojos están puestos en el equipo para ver si puede llevarse el campeonato mundial por segunda vez consecutiva.</p>
-            <p>El desempeño de T1 en el MSI 2024 ha sido impresionante, con jugadores como Faker, Zeus y Keria demostrando un nivel de juego excepcional. La sinergia del equipo es evidente, y su coordinación en las partidas ha sido una de las claves para su éxito.</p>
-            <p>Uno de los momentos más destacados fue su victoria sobre JD Gaming, uno de los equipos más fuertes de China, donde Faker realizó una jugada maestra con LeBlanc, asegurando la victoria para T1 en un enfrentamiento decisivo. Además, T1 ha demostrado su capacidad para adaptarse a diferentes estilos de juego, lo que les da una ventaja significativa en este torneo internacional.</p>
-            <p>Con este inicio arrollador, T1 está en una posición sólida para llegar a las finales del MSI 2024. La competencia será dura, pero el equipo tiene una mentalidad ganadora que los ha llevado al éxito en múltiples ocasiones a lo largo de los años.</p>
-            <p>La siguiente fase del MSI promete más acción emocionante, y los fanáticos de T1 esperan con ansias ver cómo el equipo se enfrenta a los otros gigantes del LoL, como Royal Never Give Up y G2 Esports, en las etapas eliminatorias.</p>
-        </div>
+    <p>🏆 Con esta victoria, T1 se convirtió en el <strong>primer equipo en la historia de League of Legends</strong> en ganar <strong>tres Campeonatos Mundiales consecutivos</strong> (2023, 2024 y 2025).</p>
+
+    <p>🔥 Este triunfo también permitió a la organización alcanzar un total de <strong>seis títulos mundiales</strong>, ampliando su récord como el equipo más exitoso en la historia del torneo.</p>
+
+    <p>⭐ El MVP de la final fue <strong>Gumayusi</strong>, quien destacó por su rendimiento decisivo en los momentos clave de la serie.</p>
+</div>
+
+<!-- Récord de títulos mundiales -->
+<div class="news-item">
+    <h3>🏆 Récord histórico de títulos mundiales de T1</h3>
+    <p><strong>📰 Fuente:</strong> <a href="https://www.invenglobal.com">Inven Global</a></p>
+
+    <p>T1 ostenta el récord de más títulos del Campeonato Mundial de League of Legends.</p>
+
+    <p>📅 Campeonatos obtenidos en:
+        <br>• Worlds 2013
+        <br>• Worlds 2015
+        <br>• Worlds 2016
+        <br>• Worlds 2023
+        <br>• Worlds 2024
+        <br>• Worlds 2025
+    </p>
+
+    <p>🌍 Estos logros consolidan a T1 como la organización más dominante y exitosa en la historia del competitivo mundial de League of Legends.</p>
+</div>
+
+<!-- Noticias MSI 2025 -->
+<div class="news-item">
+    <h3>🌐 MSI 2025: T1 finalista tras una serie histórica</h3>
+    <p><strong>📅 Fecha:</strong> mayo, 2025</p>
+    <p><strong>📰 Fuente:</strong> <a href="https://www.si.com">Sports Illustrated</a></p>
+
+    <p>T1 llegó a la <strong>gran final del Mid-Season Invitational 2025</strong>, enfrentándose a Gen.G en una serie muy disputada.</p>
+
+    <p>⚔️ El equipo cayó por <strong>3-2 ante Gen.G</strong>, finalizando el torneo como subcampeón internacional.</p>
+
+    <p>📈 A pesar de la derrota, T1 demostró un altísimo nivel competitivo y confirmó su posición como uno de los mejores equipos del mundo.</p>
+</div>
+
+<!-- Datos adicionales -->
+<div class="news-item">
+    <h3>🧠 Datos adicionales importantes sobre T1</h3>
+    <p><strong>📰 Fuentes:</strong> Inven Global, Bo3.gg, Wikipedia</p>
+
+    <p>⭐ Faker ha ganado <strong>seis campeonatos mundiales</strong> con T1, consolidándose como una de las mayores leyendas en la historia de League of Legends.</p>
+
+    <p>🏆 A nivel regional, T1 ha conseguido <strong>más de 10 títulos de la LCK</strong>, siendo uno de los equipos más dominantes de Corea del Sur.</p>
+
+    <p>🔥 La combinación de experiencia, talento y disciplina ha permitido a T1 mantenerse en la élite durante más de una década.</p>
+</div>
+<!-- Noticias Mundial 2024 -->
+<div class="news-item">
+    <h3>🏆 Campeonato Mundial 2024: T1 vuelve a la cima del mundo</h3>
+    <p><strong>📅 Fecha:</strong> noviembre, 2024</p>
+    <p><strong>📰 Fuente:</strong> <a href="https://www.invenglobal.com">Inven Global</a></p>
+
+    <p>T1 se consagró campeón del <strong>World Championship 2024</strong>, reafirmando su dominio en la escena internacional de League of Legends.</p>
+
+    <p>🔥 El equipo mostró un nivel excepcional durante todo el torneo, destacándose por su macrojuego, disciplina y ejecución en momentos clave.</p>
+
+    <p>⭐ Faker lideró al equipo con su experiencia, mientras que jugadores como Gumayusi y Keria fueron determinantes en las partidas decisivas.</p>
+
+    <p>🏆 Con este título, T1 consiguió su <strong>quinto Campeonato Mundial</strong>, preparando el camino para un histórico tricampeonato consecutivo.</p>
+</div>
 
     </section>
 
